trying to make sure links look better with more spacing

--- a/style.css
+++ b/style.css
@@ -422,14 +422,13 @@ blockquote {
 .post .postmetadata {
 	margin:0 auto;
 	width:89%;
-        height: 100px;
-
+    height: 100px;
 	background:#F9F9F9;
 	color:#999999;
 	font-size:11px;
 	line-height:18px;	
 	margin-bottom:30px;
-	padding:5px 20px;
+	padding: 20px 20px;
 	
 }
 .entry {
